# SoftwareEngineering

./: CMakeLists.txt  README.txt  compile.bat  main.cpp  manager.h  record.cpp  record.h  ui.cpp  ui.h
.github/workflows/: ci.yml
include/: manager.h  ui.h
src/: main.cpp  manager.cpp  ui.cpp
test/: test.cpp  test2.cpp
